--- a/style.css
+++ b/style.css
@@ -49,6 +49,91 @@
     height: 42px;
     padding-top: 25px;
 }
+.nav2{
+    /* width: 850px; */
+    width: 55.3vw;
+    height: 64px;
+    /* background-color: aqua; */
+    margin: auto;
+    display: flex;
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+    border: 1px solid #e0dada;
+    font-size: 12px;
+}
+.n2s1{
+    /* width: 284.26px; */
+    width: 37vw;
+    height: 63px;
+    /* background-color: blue; */
+    align-content: center;
+    padding-left: 35px;
+}
+.n2s2{
+    /* width: 140.74px; */
+    width: 16vw;
+    height: 63px;
+    align-content: center;
+    padding-left: 10px;
+
+    /* background-color: green; */
+}
+.n2s3{
+    /* width: 140.74px; */
+    width: 16vw;
+    height: 63px;
+    align-content: center;
+    padding-left: 10px;
+    /* background-color: red; */
+}
+.n2s4{
+    /* width: 284.2px; */
+    width: 32.5vw;
+    height: 63px;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: yellow; */
+}
+.n2roundsec{
+    width: 48px;
+    height: 48px;
+    background-color: rgb(255, 87, 87);
+    border-radius: 50%;
+    margin-right: 10px;
+    justify-content: center;
+    margin-top: 7px;
+}
+.navsearch{
+    height: 18px;
+    width: 18px;
+    margin: auto;
+    margin-top: 15px;
+}
+.nav2tt{
+    color: #6A6A6A;
+    font-size: 14px;
+    padding-top: 2px;
+}
+.n2s1:hover{
+    background-color: #dbdbdb;
+    border-radius: 30px;
+}
+.n2s1:hover input{
+    background-color: #dbdbdb;
+}
+.n2s2:hover{
+    background-color: #dbdbdb;
+    border-radius: 30px;
+}
+.n2s3:hover{
+    background-color: #dbdbdb;
+    border-radius: 30px;
+}
+.n2s4:hover{
+    background-color: #dbdbdb;
+    border-radius: 30px;
+}
 
 
 
@@ -60,6 +145,9 @@
     .nsec3{
         padding-top: 0px;
     }
+    .nav2{
+        width: 80vw;
+    }
 }
 @media only screen and (max-width : 1127px){
     .nsec1lg2{
@@ -68,6 +156,9 @@
 }
 @media only screen and (max-width : 743.5px){
     .nav1{
+        visibility: hidden;
+    }
+    .nav2{
         visibility: hidden;
     }
 }
