--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@
     margin: auto;
     display: flex;
     align-items: center;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px, rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
     visibility: hidden;
@@ -399,6 +399,17 @@
     /* .isec-1 div{
         justify-content: center;
     } */
+    .isec1-img img{
+        height: 500px ;
+        width: 600px ;
+        border-radius: 10px;
+    }
+    .subnav{
+        justify-content: space-around;
+    }
+    .inspt{
+        width: 500px;
+    }
 }
 
 @media only screen and (min-width : 550px) and (max-width : 950px){
